google maps functionality

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_CONNECTION_STRING=mongodb+srv://blee4284:BUgWaGWc1tMgQP7m@cluster0.lmmbzlr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MAPS_API_KEY=AIzaSyDWDTIkSKgXe_F-oBe_WZ1QQvRs2Vm7kdo
